updated framework tests